--- a/embeddings/corpus/readme
+++ b/embeddings/corpus/readme
@@ -1,5 +1,5 @@
 
-arabic-news-labr.txt is an Arabic corpus contains a mixture of formal and spoken (dialectal) Arabic.
+arabic-news.txt.gz is an Arabic corpus contains a mixture of formal and spoken (dialectal) Arabic.
 
 It is collected and processed from 5 different sources.
 
